# epy_reports

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  build.py  epy_mdr.spec  epy_reports.spec  housekeeper.py  pyproject.toml  sample.bib  sample.qmd
.github/workflows/: ci.yml  installers.yml
docs/: installer.md
examples/: sample.bib  sample.md
examples/newmark/: README.md  newmark.md  newmark_es.md  render_all_themes.py
installer/: README.md  SHARED_RUNTIME.md  make_icon.py
installer/linux/: build_deb.py
installer/windows/: epy_mdr.iss  epy_reports.iss
src/epy_mdr/: __init__.py  __main__.py  _design.py  _diagrams.py  _i18n.py  _media_export.py  _pdf_footer.py  about_dialog.py  app.py  bib.py  bib_dialog.py  checklist_dialog.py  columns_dialog.py  docs_bridge.py  docs_export_dialog.py  document_properties_dialog.py  epyson.py  equation_dialog.py  figure_dialog.py  footnote_dialog.py  latex_catalog.py  renderer.py  snippets.py  tab.py  table_dialog.py  template.py  templates.py  theme_editor_dialog.py  themes.py  winreg_assoc.py  xref_dialog.py
src/epy_mdr/assets/: __init__.py  style.css  welcome.md  welcome_es.md
src/epy_mdr/assets/branding/: __init__.py
src/epy_mdr/assets/reference_docx/: academic.docx  creative.docx  handwritten.docx
src/epy_mdr/assets/samples/: sample_en.md  sample_es.md
src/epy_mdr/assets/themes/: __init__.py
src/epy_reports/: __init__.py  __main__.py  _design.py  _export_pdf.py  _i18n.py  _media_export.py  _plotly.py  _previews.py  about_dialog.py  app.py  bib_dialog.py  checklist_dialog.py  columns_dialog.py  design_block_dialog.py  docs_bridge.py  docs_export_dialog.py  document_properties_dialog.py  epyson.py  equation_dialog.py  figure_dialog.py  footnote_dialog.py  renderer.py  snippets.py  tab.py  table_dialog.py  template.py  templates.py  theme_editor_dialog.py  theme_gallery_dialog.py  themes.py  winreg_assoc.py  xref_dialog.py
src/epy_reports/_config/: __init__.py
src/epy_reports/_config/_assets/: style.css  welcome.md  welcome_es.md
src/epy_reports/_config/_assets/branding/: __init__.py
src/epy_reports/_config/_assets/csl/: __init__.py
src/epy_reports/_config/_assets/plotly/: __init__.py
src/epy_reports/_config/_assets/reference_docx/: academic.docx  corporate.docx  creative.docx  professional.docx
src/epy_reports/_config/_assets/themes/: __init__.py  academic.epyson
src/epy_reports/_core/: __init__.py  _design.py  _export_pdf.py  _media_export.py  _pdf_footer.py  _plotly.py  _previews.py  epyson.py  renderer.py  template.py
src/epy_reports/_core/_packaging/: capture_editor.py  make_icon.py  make_reference_docx.py
src/epy_reports/_core/_packaging/linux/: build_deb.py
src/epy_reports/_core/_packaging/windows/: epy_reports.iss
src/epy_reports/_ui/: __init__.py  about_dialog.py  bib_dialog.py  checklist_dialog.py  columns_dialog.py  design_block_dialog.py  docs_export_dialog.py  document_properties_dialog.py  equation_dialog.py  figure_dialog.py  footnote_dialog.py  tab.py  table_dialog.py  theme_editor_dialog.py  theme_gallery_dialog.py  themes.py  xref_dialog.py
src/epy_reports/assets/: __init__.py  welcome.md  welcome_es.md
src/epy_reports/assets/branding/: __init__.py
src/epy_reports/assets/reference_docx/: __init__.py  classic.docx  corporate.docx  handwritten.docx  minimal.docx  professional.docx  scientific.docx  technical.docx
src/epy_reports/epy_suite_connect/: __init__.py  docs_bridge.py
src/epy_reports/epy_suite_connect/adapters/: __init__.py  docs_bridge.py
tests/: conftest.py  test_api_formal.py  test_app.py  test_app_commands.py  test_bib_short_label.py  test_bib_writer.py  test_branding.py  test_checklist_dialog.py  test_columns_dialog.py  test_cover_page.py  test_crossref_resolver.py  test_csl_resolver.py  test_design_blocks.py  test_design_css.py  test_diagrams.py  test_docs_bridge.py  test_docs_export_dialog.py  test_document_properties_dialog.py  test_embed_images.py  test_epyson_heading_ramp.py  test_equation_dialog.py  test_figure_dialog.py  test_footnote_dialog.py  test_housekeeper.py  test_i18n.py  test_icu_pin.py  test_image_markdown.py  test_import_isolation.py  test_index_collection.py  test_latex_catalog.py  test_media_export.py  test_media_export_internals.py  test_next_label.py  test_page_break.py  test_page_margin.py  test_page_size.py  test_page_view.py  test_pdf_footer.py  test_pdf_footer_internals.py  test_plotly.py  (+13 more)
tools/: capture_editor.py  make_reference_docx.py
tutorials/: sample.md
tutorials/newmark/: README.md  newmark.bib  newmark.md  newmark_es.md  render_all_themes.py
