[project]
name = "epy_mdr"
version = "0.6.6"
description = "Quarto/Markdown editor with live preview and one-click PDF export."
authors = [
    { name = "Ing. Angel Navarro-Mora M.Sc.", email = "ahnavarro@anmingenieria.com" },
]
maintainers = [
    { name = "ANM Ingeniería", email = "ahnavarro@anmingenieria.com" },
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Text Editors",
    "Topic :: Office/Business",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "pypandoc-binary>=1.13",
    "pypdf>=4.0",
    "reportlab>=4.0",
]

[project.urls]
Homepage = "https://www.anmingenieria.com/"
Repository = "https://github.com/estructuraPy/epy_mdr"
Issues = "https://github.com/estructuraPy/epy_mdr/issues"
Changelog = "https://github.com/estructuraPy/epy_mdr/blob/main/CHANGELOG.md"

[project.optional-dependencies]
build = ["pyinstaller>=6.6"]
# NOTE: the epy_docs rendering backend is a commercial, privately
# distributed package (not on PyPI). It is detected at runtime when
# installed; do NOT add it here — a public extra pointing at an
# unregistered PyPI name is a dependency-confusion vector.
dev = ["pytest>=8.0"]

[project.gui-scripts]
epy_mdr = "epy_mdr.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epy_mdr"]
# assets/ is a sub-package (has __init__.py) so hatchling already
# walks into it and bundles every asset alongside the .py files —
# no force-include needed. Re-introducing one would double-add
# `epy_mdr/assets/__init__.py` and fail metadata generation.

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "SIM"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D"]
"build.py" = ["D"]
"epy_mdr.spec" = ["D", "F821", "E501"]
# Data catalog: one symbol entry per line (label + Spanish tooltip);
# wrapping the rows to 79 chars would hurt, not help, readability.
"src/epy_mdr/latex_catalog.py" = ["E501"]
# Embedded JavaScript reflow script lives in a triple-quoted string;
# its lines are JS, not Python, and must stay verbatim.
"src/epy_mdr/template.py" = ["E501"]
# Example scripts favor readability over library docstring/line rules.
"examples/**/*.py" = ["D", "SIM105", "E501"]
# Installer build scripts embed shell heredocs and long literal paths.
"installer/**/*.py" = ["D", "E402", "E501"]
