[project]
name = "epy_reports"
version = "0.1.6"
description = "Markdown report editor with live preview and one-click PDF export."
authors = [
    { name = "Ing. Angel Navarro-Mora M.Sc.", email = "ahnavarro@anmingenieria.com" },
]
maintainers = [
    { name = "ANM Ingeniería", email = "ahnavarro@anmingenieria.com" },
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Text Editors",
    "Topic :: Office/Business",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "pypandoc-binary>=1.13",
    "pypdf>=4.0",
    "reportlab>=4.0",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://www.anmingenieria.com/"
Repository = "https://github.com/estructuraPy/epy_reports"
Issues = "https://github.com/estructuraPy/epy_reports/issues"
Changelog = "https://github.com/estructuraPy/epy_reports/blob/main/CHANGELOG.md"

[project.optional-dependencies]
build = ["pyinstaller>=6.6"]
# NOTE: the epy_docs rendering backend is a commercial, privately
# distributed package (not on PyPI). It is detected at runtime when
# installed; do NOT add it here — a public extra pointing at an
# unregistered PyPI name is a dependency-confusion vector.
dev = ["pytest>=8.0", "ruff>=0.11.0"]

[project.gui-scripts]
epy_reports = "epy_reports.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epy_reports"]
# _config/_assets/ is a sub-package (has __init__.py) so hatchling already
# walks into it and bundles every asset alongside the .py files —
# no force-include needed. Re-introducing one would double-add
# `epy_reports/_config/_assets/__init__.py` and fail metadata generation.
# _core/_packaging/ holds dev/build/release tooling (icon generator, .deb
# assembler, Inno Setup script, build-time source images) that must never
# ship inside the wheel — exclude it explicitly.
exclude = ["src/epy_reports/_core/_packaging"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "SIM"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D"]
"build.py" = ["D"]
"epy_reports.spec" = ["D", "F821", "E501"]
# Data catalog: one symbol entry per line (label + Spanish tooltip);
# wrapping the rows to 79 chars would hurt, not help, readability.
"src/epy_reports/latex_catalog.py" = ["E501"]
# Embedded JavaScript reflow script lives in a triple-quoted string;
# its lines are JS, not Python, and must stay verbatim.
"src/epy_reports/template.py" = ["E501"]
# Example scripts favor readability over library docstring/line rules.
"tutorials/**/*.py" = ["D", "SIM105", "E501"]
# Build/release tooling (installer + dev scripts) embeds shell heredocs,
# long literal paths and sys.path bootstrap imports.
"src/epy_reports/_core/_packaging/**/*.py" = ["D", "E402", "E501"]
